# biyesheji

./: # 桌面级具身智能机器人感知-决策-执行一体化原型系统需求文档.md  .gitignore  DEVELOPMENT_SPEC.md  README.md  package-lock.json  package.json  pyproject.toml  start.ps1
config/: config.example.yaml  phase4_non_mcp_real_camera.yaml  phase4_non_mcp_real_models.yaml  phase4_real_opencv_lerobot_local.example.yaml  phase4_real_opencv_mcp_bridge.example.yaml
docs/: README.md  SESSION_START.md  thesis_draft.md  thesis_final_draft.md
docs/records/: CURRENT_STATUS.md  DEVELOPMENT_LOG.md  E2E_CLOSURE_ROADMAP.md  EXPERIMENTS.md  FIGURE_ASSETS.md  HANDOFF.md  HARDWARE_INTEGRATION_TODOS.md  MILESTONES.md  OUTPUTS_THESIS_PLACEMENT.md  PROMPT_ASSETS.md  SMOLVLA_REAL_EXECUTION_EVIDENCE.md  TEST_REPORT.md  THESIS_APPENDIX_READY.md  THESIS_CHAPTER_ASSET_MAP.md  THESIS_CHAPTER_WRITING_GUIDE.md  THESIS_EVIDENCE_INDEX.md  THESIS_MAIN_TEXT_10000.md  THESIS_MERMAID_ARCHITECTURE.md  THESIS_OUTLINE_AND_PROJECT_SUMMARY.md  THESIS_PROGRESS.md  THESIS_SUPPLEMENTARY_MATERIALS.md  (+1 more)
docs/reference/: ARCHITECTURE.md  (+3 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js  vite.config.ts
scripts/: dev.js  env_real_smolvla_local.sh  export_training_report.py  hanoi_demo_collect.py  phase4_local_e2e_smoke.py  phase4_p0_real_smoke.py
tests/: conftest.py  test_app_phase1.py  test_backend_http_phase3.py  test_backend_phase3.py  test_backend_run_stream_phase3.py  test_decision_phase1.py  test_execution_phase1.py  test_hanoi_demo_collection.py  test_hanoi_skill.py  test_perception_phase1.py
(+76 files in other folders)
